WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98426
Fix <input type="month"> tests
https://bugs.webkit.org/show_bug.cgi?id=98426
Summary
Fix <input type="month"> tests
Tony Chang
Reported
2012-10-04 10:43:16 PDT
Fix <input type="month"> tests
Attachments
Patch
(2.38 KB, patch)
2012-10-04 10:44 PDT
,
Tony Chang
ojan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-10-04 10:44:40 PDT
Created
attachment 167127
[details]
Patch
Tony Chang
Comment 2
2012-10-04 10:46:25 PDT
Committed
r130409
: <
http://trac.webkit.org/changeset/130409
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug