Fix <input type="month"> tests https://bugs.webkit.org/show_bug.cgi?id=98426

Reviewed by Ojan Vafai.

The month picker uses flexbox and assumes that it will be aligned with
the last line box. This looks visually correct. I will follow up on
www-style to see what the expected behavior is.

Tests: fast/forms/month-multiple-fields tests cover this.

* rendering/RenderFlexibleBox.cpp:
* rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/116406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130409 268f45cc-cd09-0410-ab3c-d52691b4dbfc