Source/WebCore/rendering/RenderFlexibleBox.h
@@ -51,7 +51,6 @@ public:
 
     virtual LayoutUnit baselinePosition(FontBaseline, bool firstLine, LineDirectionMode, LinePositionMode = PositionOnContainingLine) const OVERRIDE;
     virtual LayoutUnit firstLineBoxBaseline() const OVERRIDE;
-    virtual LayoutUnit lastLineBoxBaseline() const OVERRIDE;
 
     virtual void paintChildren(PaintInfo& forSelf, const LayoutPoint&, PaintInfo& forChild, bool usePrintRect) OVERRIDE;
 
